--- a/fast-company/package.json
+++ b/fast-company/package.json
@@ -11,8 +11,9 @@
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^5.0.1",
+        "react-router-dom": "^5.3.4",
         "react-scripts": "5.0.1",
+        "react-select": "^5.7.0",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
