--- a/fast-company/src/app/config.json
+++ b/fast-company/src/app/config.json
@@ -1,4 +1,4 @@
 {
-    "apiEndpoint": "https://fast-company-firebase-536ca-default-rtdb.europe-west1.firebasedatabase.app",
-    "isFireBase": true
+  "apiEndpoint": "",
+  "isFireBase": true
 }
