add authorization for users

--- a/fast-company/src/app/config.json
+++ b/fast-company/src/app/config.json
@@ -1,4 +1,4 @@
 {
-  "apiEndpoint": "",
-  "isFireBase": true
+    "apiEndpoint": "https://fast-company-firebase-536ca-default-rtdb.europe-west1.firebasedatabase.app",
+    "isFireBase": true
 }
