--- a/fast-company/package.json
+++ b/fast-company/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.3",
         "@sentry/react": "^7.37.2",
         "@sentry/tracing": "^7.37.2",
         "@testing-library/jest-dom": "^5.16.5",
@@ -15,6 +16,7 @@
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-redux": "^8.0.5",
         "react-router-dom": "^5.3.4",
         "react-scripts": "5.0.1",
         "react-select": "^5.7.0",
