--- a/fast-company/package.json
+++ b/fast-company/package.json
@@ -11,6 +11,7 @@
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.3.3",
         "bootstrap": "^5.1.0",
+        "history": "^5.3.0",
         "lodash": "^4.17.15",
         "nanoid": "^4.0.1",
         "prop-types": "^15.8.1",
